--- a/Program/Program.vcxproj
+++ b/Program/Program.vcxproj
@@ -133,12 +133,20 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Dexterity.cpp" />
     <ClCompile Include="Message.cpp" />
     <ClCompile Include="Program.cpp" />
+    <ClCompile Include="Stat.cpp" />
+    <ClCompile Include="Strength.cpp" />
+    <ClCompile Include="Wisdom.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Dexterity.h" />
     <ClInclude Include="Message.h" />
+    <ClInclude Include="Stat.h" />
     <ClInclude Include="stdafx.h" />
+    <ClInclude Include="Strength.h" />
+    <ClInclude Include="Wisdom.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
